# gwentdb

./: LICENSE.txt  border_config.toml  config.toml  connection.py  create.py  draft_plot.py  draw_it.py  fromfile.py  gwent.csv  gwent.html  main.cpp  main.py  pivot.py  plot.py  pyproject.toml  requirements.txt  sql.py  support.py  table.py  test_draw.py  testsqlquery.py
