[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
lxml = "^4.4"
python = "^3.8"
toml = "^0.10.2"
bs4 = "^0.0.1"
pandas = "^1.2.4"
[tool.poetry.dev-dependencies]
