[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["nekokat <nekokaty89@gmail.com>"]
description = ""
name = "qwentdb"
version = "0.2.0"
[tool.poetry.dependencies]
lxml = "^4.9"
python = "^3.8"
toml = "^0.10.2"
bs4 = "^0.0.1"
[tool.poetry.dev-dependencies]
